# hahacaton_2025

./: .dockerignore  .gitignore  README.md  database.db  docker-compose.yaml  package-lock.json  package.json
backend/: Dockerfile  README.md  main.py  pyproject.toml
backend/auth/: models.py  routes.py  schemas.py  service.py
backend/core/: database.py
backend/events/: models.py  routes.py  schemas.py
backend/references/: models.py
backend/results/: service.py
backend/src/auth/: routes.py  schemas.py  service.py
backend/src/competitions/: models.py  service.py
backend/src/core/: config.py
backend/src/database/: init_db.py  session.py
backend/src/discipline/: models.py  routes.py  schemas.py  service.py
backend/src/events/: models.py  service.py
backend/src/orc/: ocr_utils.py  parser.py  test_orc.py
backend/src/references/: service.py
backend/src/results/: models.py
backend/src/roles/: models.py
backend/src/teams/: models.py  routes.py  schemas.py  service.py
backend/src/users/: models.py  routes.py  schemas.py  service.py
backend/teams/: models.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: app.html
frontend/src/lib/styles/: global.css
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/docs/: +page.svelte
frontend/src/routes/documentation/: +page.svelte
frontend/src/routes/login/: +page.svelte
frontend/src/routes/rating/: +page.svelte
frontend/src/routes/register/: +page.svelte
frontend/src/routes/stub/: +page.svelte
frontend/src/routes/team-registration/: +page.svelte
