[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt>=5.0.0",
    "fastapi>=0.120.1",
    "passlib>=1.7.4",
    "pydantic>=2.12.3",
    "python-jose[cryptography]>=3.5.0",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.38.0",
]

[tool.ruff]
line-length = 100
target-version = "py313"
indent-width = 4

[tool.ruff.lint]
select = [
    "ALL"
]
ignore = [
    "RUF001",
    "RUF002",
    "RUF003",
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D107",
    "UP037",
    "ANN201",
    "G004",
    "T201",
    "TRY301",
    "B904",
]




[tool.ruff.lint.per-file-ignores]
"src/routes/*.py" = ["ANN201", "ANN202"]

[tool.ruff.format]
# Use tabs instead of 4 space indentation.
indent-style = "space"
quote-style = "double"
